# algosim

./: README.rst  config.toml  setup.cfg
algosim/: __init__.py  cli.py  controller.py  data.py  events.py  function.py  model.py  rating.py  rng.py  selection.py  user.py  video.py
