[metadata]
name = vydio-algosim
version = 0.1.0
description = Testing grounds for different video ranking algorithms
long-description = file: README.rst
long-description-content-type = text/x-rst
author = Calvin Jay Ross
author_email = calvinjayross@gmail.com
license = MIT
url = https://github.com/vydio/algosim
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    simpy >= 3.0
    numpy >= 1.15
    scipy >= 1.5
    matplotlib >= 3.2
    toml >= 0.10
    schema >= 0.7
    click >= 7.1
    colorama >= 0.4
    faker >= 4.1

[options.entry_points]
console_scripts =
    algosim = algosim:main

[flake8]
exclude = .git,.tox,*migrations*
max-line-length = 119
max-complexity = 11
